tests/e2e/string_escaping2.error
Error: syntax error in story at line 1, column 11

1|              \
                ^

E0041: `\` is not allowed here
